feat: update certain recipes

--- a/dermardiros/batons_sale.tex
+++ b/dermardiros/batons_sale.tex
@@ -15,7 +15,7 @@
     1 cup warm water \\
     1 1/2 cups vegetable oil \\
     1/2 cup zaatar \\
-    1 Egg \\
+    1 egg \\
     Nigella seeds
 }
 
