--- a/dermardiros/tahini.tex
+++ b/dermardiros/tahini.tex
@@ -13,10 +13,10 @@
     Juice of 5 lemons \\
     Garlic, finely chopped \\
     Cumin \\
-    Salt 
+    Salt
 }
 
-Family member: Sybil
+Family member: Sybil and Dede Dikran
 
 \begin{enumerate}
     \item Add all the ingredients to a blender or chopper, and blend until smooth. Adjust with cumin and salt to taste.
