--- a/monanteras/chocolate_cake.tex
+++ b/monanteras/chocolate_cake.tex
@@ -28,19 +28,27 @@
     \textbf{Ingredients for syrup} \\
     1 cup water \\
     1 cup sugar \\
-    1 tbsp lemon juice 
+    1 tbsp lemon juice
 }
 
 \textit{A Very Chocolatey Cake with Syrup and Maraschino Cherries}
 
 Family member: Grandma Eleni
 
-\begin{figure}  % [20pt]
-  \includegraphics[width=60mm]{monanteras/images/Chocolate cake 2.jpg}
-  \caption{Celebrating Grandma's 80^{th} birthday}
-\end{figure}
-\begin{figure}  % [20pt]
-  \includegraphics[width=60mm]{monanteras/images/Chocolate cake.jpg}
-  \caption{The Chocolate Cake}
-\end{figure}
+% {{{ The follwing is from ChatGPT, to be updated...
+\begin{enumerate}
+    \item Preheat the oven to 180°C (350°F). Grease and flour a 9-inch cake pan.
+    \item In a mixing bowl, cream the butter and sugar until light and fluffy. Add the eggs one at a time, beating well after each addition.
+    \item Mix in the vanilla extract and orange zest.
+    \item Sift together the flour, cocoa powder, and baking powder. Gradually add the dry ingredients to the wet mixture, alternating with the milk. Mix until just combined.
+    \item Pour the batter into the prepared pan and bake for 45 minutes, or until a toothpick inserted in the center comes out clean.
+    \item While the cake is baking, prepare the syrup. In a saucepan, combine water, sugar, and lemon juice. Bring to a boil, then simmer for 5 minutes. Set aside to cool.
+    \item For the ganache, heat the cream in a saucepan until just about to boil. Remove from heat and pour over chopped dark chocolate. Let sit for 5 minutes, then stir until smooth.
+    \item Once the cake is baked, allow it to cool slightly, then poke small holes all over the surface with a skewer. Drizzle the syrup evenly over the cake.
+    \item Spread the ganache over the top and sides of the cake. Decorate with maraschino cherries or as desired.
+\end{enumerate}
 
+Grandma Eleni's cake is always a hit at family gatherings, with its moist texture and rich chocolate flavor.
+% }}}
+
+\twosidecaptionfigure{monanteras/images/Chocolate cake 2.jpg}{monanteras/images/Chocolate cake.jpg}{(Left) Celebrating Grandma's 80$^{th}$ birthday, (Right) The Chocolate Cake}{fig:chocolatecake}
