--- a/monanteras/moustokouloura.tex
+++ b/monanteras/moustokouloura.tex
@@ -37,12 +37,6 @@ Family member: Grandma Eleni
     \item Place the shaped cookies onto baking sheets and bake 12-15 minutes on the upper rack at 350\degree F until the tops have a golden color.
 \end{enumerate}
 
-\begin{figure}
-  \includegraphics[width=80mm]{monanteras/images/Moustokouloura.jpg}
-\end{figure}
-\begin{figure}
-  \includegraphics[width=80mm]{monanteras/images/Moustokouloura recipe.jpg}
-\end{figure}
-
 Eat soon after baking, and once cooled, stored in a large Tupperware. This allows them to be soft and can be kept for a long time if you can resist.
 
+\twosidecaptionfigure{monanteras/images/Moustokouloura.jpg}{monanteras/images/Moustokouloura recipe.jpg}{Moustokouloura}{fig:moustokouloura}
