--- a/monanteras/tsoureki.tex
+++ b/monanteras/tsoureki.tex
@@ -44,6 +44,4 @@ Family member: Grandma Eleni
     \item Let cool for a few hours. Remove the foil and replace with colored Easter eggs.
 \end{enumerate}
 
-\begin{figure}
-  \includegraphics[width=60mm]{monanteras/images/Grandma eleni.JPG}
-\end{figure}
+\captionfigure{monanteras/images/Grandma eleni.JPG}{Grandma Eleni}{fig:tsoureki}
