--- a/velsa/babka.tex
+++ b/velsa/babka.tex
@@ -14,24 +14,15 @@
     2 tsp mahleb
 }
 
-\begin{figure}
-  \includegraphics[width=60mm]{velsa/images/Babka.png}
-\end{figure}
+\marginalfigure{velsa/images/Babka.png}{Babka}{fig:babka}
 
 Family member: Elsa \& Vaski
 
 \begin{enumerate}
     \item In a mixing bowl, whisk the dry ingredients. In another bowl, whisk wet ingredients together. Gradually add wet ingredients to dry ingredients while mixing. Mix for 5 minutes with the paddle. Let rest for a few minutes.
-
 \end{enumerate}
 
-\begin{figure}
-  \includegraphics[width=60mm]{velsa/images/PXL_20230513_193701113.jpg}
-\end{figure}
-\begin{figure}
-  \includegraphics[width=60mm]{velsa/images/PXL_20230513_194822519.jpg}
-\end{figure}
-\begin{figure}
-  \includegraphics[width=60mm]{velsa/images/Babka at picnic.jpg}
-\end{figure}
+\twosidecaptionfigure{velsa/images/PXL_20230513_194822519.jpg}{velsa/images/Babka at picnic.jpg}{Babka}{fig:babka2}
 
+% % picture with Vaski
+% {velsa/images/PXL_20230513_193701113.jpg}
