feat: chocolate cake chatgpt instructions, wip

--- a/monanteras/chocolate_cake.tex
+++ b/monanteras/chocolate_cake.tex
@@ -43,6 +43,7 @@ Family member: Grandma Eleni
     \item Sift together the flour, cocoa powder, and baking powder. Gradually add the dry ingredients to the wet mixture, alternating with the milk. Mix until just combined.
     \item Pour the batter into the prepared pan and bake for 45 minutes, or until a toothpick inserted in the center comes out clean.
     \item While the cake is baking, prepare the syrup. In a saucepan, combine water, sugar, and lemon juice. Bring to a boil, then simmer for 5 minutes. Set aside to cool.
+    % this one doesn't make sense... but the chocolate ganache also is missing ingredients
     \item For the ganache, heat the cream in a saucepan until just about to boil. Remove from heat and pour over chopped dark chocolate. Let sit for 5 minutes, then stir until smooth.
     \item Once the cake is baked, allow it to cool slightly, then poke small holes all over the surface with a skewer. Drizzle the syrup evenly over the cake.
     \item Spread the ganache over the top and sides of the cake. Decorate with maraschino cherries or as desired.
