fix: subtitle in lower case

--- a/dermardiros/dinerburgers.tex
+++ b/dermardiros/dinerburgers.tex
@@ -31,7 +31,7 @@
 
 \marginalfigure{dermardiros/images/Fathers day 4.jpg}{Burgers for Father's Day picnic, 2024}{fig:dinerburgers}
 
-\textit{Smash Burgers}
+\textit{Smash burgers}
 
 Family member: Dan
 
