--- a/dermardiros/frenchtoast.tex
+++ b/dermardiros/frenchtoast.tex
@@ -20,7 +20,7 @@
     Few dashes of rose water
 }
 
-\textit{French Toast with rosewater}
+\textit{French toast with rosewater}
 
 Family member: Nene Hermine
 
