--- a/monanteras/bikini_ladies.tex
+++ b/monanteras/bikini_ladies.tex
@@ -37,7 +37,7 @@
 %   \caption{Bikini Ladies and Hipsters}
 % \end{figure}
 %
-\textit{Gingerbread Cookies}
+\textit{Gingerbread cookies}
 
 Family member: Elsa \& Helen
 
