--- a/monanteras/chocolate_cake.tex
+++ b/monanteras/chocolate_cake.tex
@@ -31,7 +31,7 @@
     1 tbsp lemon juice
 }
 
-\textit{A Very Chocolatey Cake with Syrup and Maraschino Cherries}
+\textit{A very chocolatey cake with syrup and maraschino cherries}
 
 Family member: Grandma Eleni
 
