--- a/monanteras/easter_koulourakia.tex
+++ b/monanteras/easter_koulourakia.tex
@@ -19,7 +19,7 @@
     3/4 tsp vanilla powder (or 1 tsp vanilla extract) 
 }
 
-\textit{The White Cookies}
+\textit{The white cookies}
 
 Family member: Grandma Eleni
 
