--- a/monanteras/gemista.tex
+++ b/monanteras/gemista.tex
@@ -28,7 +28,7 @@
     Grated Pecorino cheese, Chelmos Greek
 }
 
-\textit{Tomatoes and Peppers stuffed with meat and rice}
+\textit{Tomatoes and peppers stuffed with meat and rice}
 
 Family member: Mom
 
