--- a/monanteras/hortopita.tex
+++ b/monanteras/hortopita.tex
@@ -28,7 +28,7 @@
 
 \marginalfigure{monanteras/images/Hortopita 4.jpg}{Hortopita}{fig:hortopita}
 
-\textit{Mixed Greens and Herb Pie}
+\textit{Mixed greens and herb pie}
 
 Family member: Grandma Elisavet
 
