--- a/monanteras/melomakarona.tex
+++ b/monanteras/melomakarona.tex
@@ -28,7 +28,7 @@
     Walnuts, crushed
 }
 
-\textit{Honey Cookies with Walnuts and Syrup}
+\textit{Honey cookies with walnuts and syrup}
 
 Family member: Grandma Eleni
 
