--- a/monanteras/moustokouloura cookies.tex
+++ b/monanteras/moustokouloura cookies.tex
@@ -25,7 +25,7 @@
 % TODO: picture has errors
 % \marginalfigure{monanteras/images/Moustokouloura.jpg}{Moustokouloura}{fig:moustokouloura}
 
-\textit{The Brown Cookies}
+\textit{The brown cookies}
 
 Family member: Grandma Eleni
 
