--- a/monanteras/pastitsiomom.tex
+++ b/monanteras/pastitsiomom.tex
@@ -28,7 +28,7 @@
     Mizithra cheese, grated
 }
 
-\textit{Mom's Pasta bake with meat sauce and bechamel}
+\textit{Mom's pasta bake with meat sauce and bechamel}
 
 Family member: Mom
 
