--- a/monanteras/portokalopita.tex
+++ b/monanteras/portokalopita.tex
@@ -33,7 +33,7 @@
     1/4 tsp orange blossom water, optional 
 }
 
-\textit{Orange Phyllo Cake}
+\textit{Orange phyllo cake}
 
 Family member: Helen
 
