--- a/monanteras/tiropita.tex
+++ b/monanteras/tiropita.tex
@@ -29,7 +29,7 @@
 }
 \marginalfigure{monanteras/images/Tiropita_elsa.jpg}{Tiropita made by Elsa and approved by Grandma Elisavet!}{fig:tiropita}
 
-\textit{Cheese Pie}
+\textit{Cheese pie}
 
 Family member: Grandma Elisavet
 
