--- a/monanteras/tiropitakia_spanakopitakia.tex
+++ b/monanteras/tiropitakia_spanakopitakia.tex
@@ -38,7 +38,7 @@
 
 \marginalfigure{monanteras/images/Tiropitakia.png}{Tiropitakia}{fig:spanakopitakia_tiropitakia}
 
-\textit{Spinach and Cheese phyllo triangles}
+\textit{Spinach and cheese phyllo triangles}
 
 Family member: Grandma Eleni
 
