fix: finalize merge from current overleaf version

--- a/dermardiros/banana_cake.tex
+++ b/dermardiros/banana_cake.tex
@@ -23,6 +23,8 @@
 
 Family member: Dzovag
 
+\marginalfigure{dermardiros/images/Christmas girls.jpg}{Christmas, 2021}{fig:bananacake}
+
 \begin{enumerate}
     \item Preheat oven to 350\degree F.
     \item In a bowl, mix the bananas and vegetable oil together.
