--- a/dermardiros/batons_sale.tex
+++ b/dermardiros/batons_sale.tex
@@ -31,11 +31,4 @@ Family member: Nene Hermine
     \item Bake at 350\degree F for about 30 minutes.
 \end{enumerate}
 
-Sybil’s trick: You can freeze 2/3 of the cookies once they have baked and cooled.
-
-% Find right place for pictures
-% \begin{figure}
-  % \includegraphics[width=60mm]{dermardiros/images/Grandpa and grandma.JPG}
-  % \includegraphics[width=60mm]{dermardiros/images/Grandpa and Grandma 2.JPG}
-  % \includegraphics[width=60mm]{dermardiros/images/Grandpa and Grandma 3.png}
-% \end{figure}
+Sybil's trick: You can freeze 2/3 of the cookies once they have baked and cooled.
