--- a/dermardiros/best_chocolatechip_cookies.tex
+++ b/dermardiros/best_chocolatechip_cookies.tex
@@ -22,6 +22,8 @@
     4 oz dark chocolate chunks (110g), or your preference
 }
 
+\marginalfigure{dermardiros/images/Ballon poire 2023.jpg}{Ballon poire at Clara's birthday, 2023}{fig:chocolatechip_cookies2}
+
 Family member: Emma
 
 \begin{enumerate}
@@ -29,9 +31,4 @@ Family member: Emma
     \item Bake for 12-15 minutes.
 \end{enumerate}
 
-% \begin{figure}
-%   \includegraphics[width=70mm]{dermardiros/images/Dzovag's cookies written by Emma.jpeg}
-% \end{figure}
-
 \captionfigure{dermardiros/images/Dzovag's cookies written by Emma.jpeg}{Handwritten recipe}{fig:chocolatechip_cookies}
-
