--- a/dermardiros/biscuits_grandmere.tex
+++ b/dermardiros/biscuits_grandmere.tex
@@ -22,6 +22,8 @@
     Sesame seeds
 }
 
+\marginalfigure{dermardiros/images/Biscuits metzma.jpg}{Biscuits Grand-Mère}{fig:biscuits_grandmere}
+
 \textit{Circle sesame cookies}
 
 Family member: Metzma Lucie
@@ -34,3 +36,5 @@ Family member: Metzma Lucie
     \item For egg wash, whisk egg yolks with a little bit of water in a bowl. Brush the egg wash onto cookies and sprinkle with sesame seeds.
     \item Bake at 350\degree F on the top rack for about 20 minutes, rotate pan once after 10 minutes.
 \end{enumerate}
+
+\twosidecaptionfigure{dermardiros/images/Family.jpg}{dermardiros/images/Family_boys.jpg}{Metzma's birthday, 2024}{fig:biscuits_grandmere2}
