--- a/dermardiros/ciambalone.tex
+++ b/dermardiros/ciambalone.tex
@@ -6,22 +6,22 @@
 
 \marginnote{
     \textbf{Makes 1 bundt cake} \\
-    Prep time: ? minutes \\
+    Prep time: 30 minutes \\
     Cook time: 35 minutes \\
     \vspace*{\baselineskip}
 
-    125 ml (½ cup) margarine or butter, room temperature \\
+    125 ml (1/2 cup) margarine or butter, room temperature \\
     3 eggs \\
     175 ml (3/4 cups) sugar \\
     50 ml (1/4 cup) oil \\
     5 ml (1 tsp) vanilla extract \\
     175 ml (3/4 cups) milk (keep a little to put on top of batter before sprinkling with sugar) \\
-    625 ml (2 ½ cups) all purpose flour \\
+    625 ml (2-1/2 cups) all purpose flour \\
     15 ml (3 tsp) baking powder \\
-    175 ml (3/4 cups) raisins (can substitute with Hershey’s caramel Chipits) \\
-    175 ml (3/4 cups) Hershey’s mini chocolate chips \\
+    175 ml (3/4 cups) raisins (can substitute with Hershey's caramel Chipits) \\
+    175 ml (3/4 cups) Hershey's mini chocolate chips \\
     2 red cherries \\
-    2 green cherries 
+    2 green cherries
 }
 
 \textit{Italian bundt cake}
@@ -40,10 +40,4 @@ Family member: Aunt Joanne
     \item Bake for 35 minutes at 180\degree C (350\degree F). Let the cake cool in the mold and remove from mold after 30 minutes.
 \end{enumerate}
 
-% \begin{figure}
-%   \includegraphics[width=70mm]{dermardiros/images/Ciambalone.jpg}
-%     \caption{Grandma Lucie's birthday in 2024}
-% \end{figure}
-
 \captionfigure{dermardiros/images/Ciambalone.jpg}{Grandma Lucie's birthday in 2024}{fig:ciambalone}
-
