--- a/dermardiros/clementinesalad.tex
+++ b/dermardiros/clementinesalad.tex
@@ -8,15 +8,12 @@
     Prep time: 15 minutes \\
     Cook time: 0 minutes \\
     \vspace*{\baselineskip}
-    
-    Two heads of romaine lettuce – about 35 leaves \\
+
+    Two heads of romaine lettuce, about 35 leaves \\
     15 clementines \\
     3/4 cup of cashews \\
-    Kraft Zesty Italian dressing 
+    Kraft Zesty Italian dressing
 }
-
-% \newthought{}
-% \bigskip
 
 Family member: Aunt Joanne
 
