--- a/dermardiros/katnabour.tex
+++ b/dermardiros/katnabour.tex
@@ -1,5 +1,5 @@
-\chapter{Katnabour}
-\label{ch:katnabour}
+\chapter{Gatnabour}
+\label{ch:gatnabour}
 \index{dessert}
 \index{rice}
 \index{pudding}
@@ -12,7 +12,7 @@
 
     1/2 cup rice, Calrose \\
     3 cups milk, 2\% \\
-    3 tbsp sugar 
+    3 tbsp sugar
 }
 
 \textit{Rice pudding}
@@ -21,16 +21,11 @@ Family member: Sybil
 
 \newthought{Secret tip:} microwave for a few second and serve warm in a small coffee cup with a sprinkle of cinnamon.
 
-% \begin{figure}
-%   \includegraphics[width=60mm]{dermardiros/images/Rice pudding.jpg}
-%   \caption{Anoushabour made in Barcelona}
-% \end{figure}
-
-\marginalfigure{dermardiros/images/Rice pudding.jpg}{Anoushabour made in Barcelona}{fig:katnabour}
+\marginalfigure{dermardiros/images/Rice pudding.jpg}{Gatnabour made in Barcelona}{fig:gatnabour}
 
 \begin{enumerate}
     \item In a pot, cook the rice in 1 cup of milk on low heat.
     \item Gradually add 1 cup of milk at a time, once milk has been absorbed.
-    \item When all the milk has been added and the rice is cooked, add the sugar. 
+    \item When all the milk has been added and the rice is cooked, add the sugar.
     \item Cook on low heat for maximum 5 minutes then set the pot aside to cool.
 \end{enumerate}
