--- a/dermardiros/mantuh.tex
+++ b/dermardiros/mantuh.tex
@@ -9,7 +9,7 @@
     Prep time: 2-3 hours \\
     Cook time: 30 minutes \\
     \vspace*{\baselineskip}
-    
+
     \textbf{Ingredients for dough} \\
     4 cups all-purpose flour \\
     1/4 cup milk \\
@@ -17,12 +17,12 @@
     1 cup lukewarm water + 1/4 - 1/2 cup more (as much as dough takes) \\
     Oil (to work dough with hands) \\
     \vspace*{\baselineskip}
-    
+
     \textbf{Ingredients for meat} \\
     1 medium onion, thinly chopped \\
     1 lb ground lean beef \\
     Salt \& pepper to taste \\
-    Armenian or Lebanese pepper 
+    Armenian or Lebanese pepper
 }
 
 \textit{Meat-filled dumplings}
@@ -33,14 +33,14 @@ Family member: Metzma Lucie
     \item Chop onion and cook in a medium pot for 1-2 minutes until soft.
     \item Add lean ground beef, salt, pepper and Armenian pepper.
     \item Cook until little or no water is left from the meat.
-    
+
     % TODO: did we want to split this up into sections?
     \item In a large bowl, mix flour and salt.
     \item Mix in milk using a spoon. Add 1 cup water and mix with hands.
     \item Add a little oil to hands to help dough unstick.
     \item Add 1/4 - 1/2 cup water slowly while mixing, until you get a soft dough.
     \item You can add up to 2 handfuls of oil.
-    
+
     \item Flatten dough using a rolling pin or a pasta machine.
     \item Cut into 1.5-inch squares, fill with some meat and pinch sides.
     \item Place month on a baking sheet lined with parchment paper, leaving some space between each.
@@ -50,3 +50,5 @@ Family member: Metzma Lucie
 
 After first cooking in oven, Sybil would normally cook them in a broth and eat as a soup. You can top with a little yogurt in there too!
 Can store cooked in bags in the freezer, reheat in oven before eating.
+
+\twosidecaptionfigure{dermardiros/images/Mantuh.jpg}{dermardiros/images/Mantuh 2.JPG}{(Left) Mantuh making for the Armenian bazar, 2018, (Right) Baked mantuh}{fig:mantuh2}
