--- a/dermardiros/quiche.tex
+++ b/dermardiros/quiche.tex
@@ -16,8 +16,10 @@
     6 slices of ham, cut \\
     5 eggs \\
     1 cup (250 ml) 15\% cooking cream \\
-    Pepper 
+    Pepper
 }
+
+\marginalfigure{dermardiros/images/Quiche.jpeg}{Quiche}{fig:hamquiche}
 
 Family member: Sybil
 
@@ -30,4 +32,3 @@ Family member: Sybil
 \end{enumerate}
 
 You can replace half of the 15\% cooking cream with milk.
-
