--- a/main.tex
+++ b/main.tex
@@ -4,7 +4,7 @@
 \title{Family Cookbook}
 \author{Elsa \mbox{Monanteras} \& Vasken \mbox{Dermardiros}}
 \date{The First Edition}
-\newcommand{\publisher}{Vasquise Publishing Group Inc.}
+\newcommand{\publisher}{Vasquise Publishing Group GmbH \& Co.}
 
 
 \begin{document}
