--- a/monanteras/chicken with potatoes.tex
+++ b/monanteras/chicken with potatoes.tex
@@ -12,13 +12,13 @@
 
     1 whole chicken, cut in half with the neck removed \\
     1-2 lemons, squeezed \\
-    4-5 red potatoes, peeled and quartered (put in water) \\
+    4-5 red potatoes, peeled and quartered, put in water \\
     Carrots, bell peppers, onions, peeled and sliced \\
     Olive oil \\
     Salt \\
     Pepper \\
     Oregano \\
-    Paprika 
+    Paprika
 }
 
 Family member: Mom
