--- a/monanteras/chocolate_cake.tex
+++ b/monanteras/chocolate_cake.tex
@@ -5,51 +5,56 @@
 \index{chocolate}
 
 \marginnote{
-    \textbf{Makes 1 cake} \\
-    Prep time: ? minutes \\
-    Cook time: ? minutes \\
+    \textbf{Makes 1 layered cake} \\
+    Prep time: 2-3 hours + cooling time \\
+    Cook time: 20-25 minutes \\
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for cake} \\
-    3 eggs \\
-    227g butter (1/2 block) \\
-    1 cup milk \\
-    2 cups sugar \\
-    3 cups all-purpose flour, ? \\
-    3 tbsp cocoa powder
-    1 tbsp baking powder \\
-    Vanilla extract \\
-    Zest of 1 orange \\
+    6 eggs, separated \\
+    5 tbsp icing sugar, sifted \\
+    4 tbsp breadcrumbs, Grisset brand, sifted \\
+    1 tsp vanilla extract \\
+    1 tsp baking powder, sifted \\
+    \vspace*{\baselineskip}
 
-    \textbf{Ingredients for chocolate ganache} \\
-    3 cups sugar
-    2 cups water
+    \textbf{Ingredients for chocolate icing} \\
+    1/2 cup butter, unsalted and at room temperature \\
+    1 cup icing sugar, sifted \\
+    2 eggs, separated \\
+    3-4 tsp cocoa powder, Fry's brand and sifted \\
+    1/2 tsp vanilla aroma or extract \\
+    \vspace*{\baselineskip}
 
     \textbf{Ingredients for syrup} \\
-    1 cup water \\
-    1 cup sugar \\
-    1 tbsp lemon juice
+    1 glass water \\
+    1 glass sugar \\
+    1 tbsp lemon juice \\
+    \vspace*{\baselineskip}
+
+    \textbf{Ingredients for assembly} \\
+    Metaxa, or another brandy \\
+    Maraschino cherries \\
+    Chocolate from Easter bunnies, grated using a peeler
 }
 
 \textit{A very chocolatey cake with syrup and maraschino cherries}
 
 Family member: Grandma Eleni
 
-% {{{ The follwing is from ChatGPT, to be updated...
-\begin{enumerate}
-    \item Preheat the oven to 180°C (350°F). Grease and flour a 9-inch cake pan.
-    \item In a mixing bowl, cream the butter and sugar until light and fluffy. Add the eggs one at a time, beating well after each addition.
-    \item Mix in the vanilla extract and orange zest.
-    \item Sift together the flour, cocoa powder, and baking powder. Gradually add the dry ingredients to the wet mixture, alternating with the milk. Mix until just combined.
-    \item Pour the batter into the prepared pan and bake for 45 minutes, or until a toothpick inserted in the center comes out clean.
-    \item While the cake is baking, prepare the syrup. In a saucepan, combine water, sugar, and lemon juice. Bring to a boil, then simmer for 5 minutes. Set aside to cool.
-    % this one doesn't make sense... but the chocolate ganache also is missing ingredients
-    \item For the ganache, heat the cream in a saucepan until just about to boil. Remove from heat and pour over chopped dark chocolate. Let sit for 5 minutes, then stir until smooth.
-    \item Once the cake is baked, allow it to cool slightly, then poke small holes all over the surface with a skewer. Drizzle the syrup evenly over the cake.
-    \item Spread the ganache over the top and sides of the cake. Decorate with maraschino cherries or as desired.
-\end{enumerate}
-
-Grandma Eleni's cake is always a hit at family gatherings, with its moist texture and rich chocolate flavor.
-% }}}
-
 \twosidecaptionfigure{monanteras/images/Chocolate cake 2.jpg}{monanteras/images/Chocolate cake.jpg}{(Left) Celebrating Grandma's 80$^{th}$ birthday, (Right) The Chocolate Cake}{fig:chocolatecake}
+
+\newthought{Grandma} \textgreek{Ελένη} would make this cake for every celebration. We all love this cake, but remember how decadent and syrupy it was. My grandpa would always say that she should put more syrup next time! I dare you to have only 1 slice.
+
+\begin{enumerate}
+    \item Preheat oven to 350\degree F and grease 3 round 9-inch metal pans well.
+    \item In a mixing bowl, whip the 6 egg whites until you obtain a meringue. Transfer them to another bowl and keep them in the fridge.
+    \item Clean the mixing bowl and whip the egg yolks with the icing sugar until they will become pale and fluffy. Add the sifted breadcrumbs, baking powder and vanilla gradually while whisking. Fold in the egg whites carefully to obtain a well-mixed batter.
+    \item Divide the mix into the 3 greased pans and bake for 20-25 minutes, until a toothpick comes out clean and they are light brown.
+    \item While the cakes cool, prepare the icing. In the same way as the cake, whip the 2 egg whites until you obtain a meringue in the mixer. Transfer them to another bowl and keep them in the fridge. Clean the bowl, then mix the softened butter with the icing sugar until they are pale and creamy. Add the egg yolks, mix, then the sifted cocoa powder and vanilla extract. Mix well, then fold in the meringue gently until you get an icing with no streaks.
+    \item Next prepare the syrup. In a small pot, bring the water, sugar and lemon juice to a boil. Boil until it thickens. To check the thickness, drop some syrup on your hand until a droplet forms. Let it cool slightly.
+    \item To assemble, sprinkle the cooled cakes with Metaxa, 1 tbsp per each cake round. Pour the cooled syrup on the cakes, dividing it among the 3 cakes. Leave the cakes absorb the syrup for at least 1 hour.
+    \item When ready to assemble, unmold the cakes. Place the first layer on a glass platter and spread some icing over it with an offset spatula. Place the second cake layer, spread more icing. Make sure not to use too much icing to have enough to frost the cake. Finally, put the last layer, top-side down.
+    \item Frost the cake, starting with the top, then working on the sides. Don't fuss over it being even because on the next step you need to cover all the cake with the grated chocolate. Decorate the top with red maraschino cherries.
+    \item Let the cake set a few hours, best overnight, before slicing!
+\end{enumerate}
