--- a/monanteras/lasagna.tex
+++ b/monanteras/lasagna.tex
@@ -10,16 +10,17 @@
     Prep time: 30-45 minutes \\
     Cook time: 35 minutes \\
     \vspace*{\baselineskip}
-    
-    Meat sauce you prepared, about half of the recipe \\
-    \**link to meat sauce**
-    454g (1pkg) Ricotta cheese \\
-    285g (1 pkg) frozen chopped spinach, thawed and drained \\
+
+    \textbf{One recipe of Meat sauce, page~\pageref{ch:meatsauce}} \\
+    \vspace*{\baselineskip}
+
+    454 g (1 pkg) Ricotta cheese \\
+    285 g (1 pkg) frozen chopped spinach, thawed and drained \\
     2 eggs, lightly beaten \\
-    500g lasagna noodles, Primo (around 12 sheets) \\
+    500 g lasagna noodles, Primo (around 12 sheets) \\
     1 jar of Catelli Garden Select Tomato \& Basil Pasta Sauce (640ml) \\
     Shredded mozzarella cheese \\
-    Grated Pecorino cheese, Chelmos Greek or mitzithra 
+    Grated Pecorino cheese, Chelmos Greek or mitzithra
 }
 
 Family member: Mom
