--- a/monanteras/lemonpotatoes.tex
+++ b/monanteras/lemonpotatoes.tex
@@ -11,12 +11,12 @@
     Cook time: 1 - 1 1/2 hours \\
     \vspace*{\baselineskip}
 
-    2kg red potatoes, peeled and quartered \\
+    2 kg red potatoes, peeled and quartered \\
     Salt \\
     Pepper \\
     Olive oil \\
     Oregano \\
-    2 lemons, juiced \\
+    2 lemons, juiced
 }
 
 Family member: Grandma Eleni
