--- a/monanteras/mavromatika.tex
+++ b/monanteras/mavromatika.tex
@@ -12,9 +12,9 @@
 
     1/2 mug of black eyed peas, dried (or 1/2 cup) \\
     1 medium onion, grated \\
-    1/2 - 1 can tomato sauce, Hunt’s (213 ml) \\
+    1/2 - 1 can tomato sauce, Hunt's (213 ml) \\
     2 bags of spinach, fresh \\
-    Olive oil 
+    Olive oil
 }
 
 \textit{Spinach stew with black eye peas}
