--- a/velsa/tsoureki_choreg.tex
+++ b/velsa/tsoureki_choreg.tex
@@ -12,20 +12,20 @@
     \vspace*{\baselineskip}
 
     \textbf{Dry ingredients} \\
-    2 ¼ tsp instant yeast \\
+    2-1/4 tsp instant yeast \\
     2 tsp mahleb \\
-    2.5g mastiha, freshly ground \\
-    830g AP flour, Robin Hood \\
-    267g sugar \\
+    2.5 g mastiha, freshly ground \\
+    830 g AP flour, Robin Hood \\
+    267 g sugar \\
     1/2 tsp salt \\
     \vspace*{\baselineskip}
 
     \textbf{Wet ingredients} \\
-    84g water, room T \\
-    334g whole milk, room T \\
+    84 g water, room T \\
+    334 g whole milk, room T \\
     4 eggs, room T \\
 
-    227g unsalted butter, room T, very soft and cut into cubes \\
+    227 g unsalted butter, room T, very soft and cut into cubes \\
     \vspace*{\baselineskip}
         
     \textbf{Before baking} \\
