--- a/dermardiros/betteraves.tex
+++ b/dermardiros/betteraves.tex
@@ -15,6 +15,8 @@
     Salt \& pepper
 }
 
+\marginalfigure{dermardiros/images/Garmir panjar.jpeg}{Garmir Panjar Tourshi}{fig:beets}
+
 \textit{Pickled beets with garlic}
 
 Family member: Sybil
@@ -22,6 +24,6 @@ Family member: Sybil
 \begin{enumerate}
     \item Boil the red beets until you can poke them with a knife.
     \item Peel them and put them in a bowl of water.
-    \item Cut the beets into irregular pieces. 
+    \item Cut the beets into irregular pieces.
     \item Place them in a bowl with the garlic, some white vinegar, salt and pepper.
 \end{enumerate}
