--- a/dermardiros/cheureg_greatgrandma.tex
+++ b/dermardiros/cheureg_greatgrandma.tex
@@ -19,8 +19,10 @@
     2 cups of milk, lukewarm \\
     2 cups sugar \\
     1.5 cups of butter, melted \\
-    Egg yolks, beaten for egg wash 
+    Egg yolks, beaten for egg wash
 }
+
+\marginalfigure{dermardiros/images/Cheureg tree.jpg}{Sybil's Christmas Cheureg}{fig:cheureg}
 
 \textit{Easter bread}
 
@@ -32,7 +34,7 @@ Family member: Great Grandma
     \item Shape into thin ropes, then into 2-inch circles.
     \item Place on baking sheet lined with parchment.
     \item In a small bowl, start yeast: place packets of yeast, 2 tsp sugar and water. Let for 15 minutes.
-    \item In a large bowl, whisk the flour and mahlep. 
+    \item In a large bowl, whisk the flour and mahlep.
     \item Create a well in the dry ingredients and add the yeast mixture. Incorporate the flour into the yeast slowly.
     \item In a small bowl, beat the eggs slightly. Add them to the flour/yeast mixture above.
     \item In another bowl, add the sugar to the lukewarm milk and mix it. Add it to the flour/yeast/egg mixture and mix well.
