--- a/dermardiros/grandma_cake.tex
+++ b/dermardiros/grandma_cake.tex
@@ -18,7 +18,8 @@
     1 cup milk \\
     1 cup vegetable oil \\
     \vspace*{\baselineskip}
-    2 tsp cocoa powder 
+
+    2 tsp cocoa powder
 }
 
 \textit{Marble bundt cake}
@@ -30,20 +31,11 @@ Family member: Metzma Lucie \& Sybil
     \item In another bowl, whisk the flour and baking powder. Add the dry ingredients to the sugar/egg mixture above in 2 times.
     \item Add the milk, then once completely incorporated, add the oil.
     \item Place half of the mix in a separate bowl, and sift in the cocoa powder. Mix it well.
-    \item Grease a loaf pan and line with parchment. 
+    \item Grease a loaf pan and line with parchment.
     \item Pour the chocolate mix in the pan, then the vanilla. Use a knife to swirl both mixes.
     \item Bake at 350\degree F for 45 minutes to 1 hour.
 \end{enumerate}
 
-% \begin{figure}
-%   \includegraphics[width=60mm]{dermardiros/images/Grandma cake 1.JPG}
-% \end{figure}
-%
-% \begin{figure}
-%   \includegraphics[width=50mm]{dermardiros/images/Grandma cake 2.jpg}
-% \end{figure}
-
 \twosidecaptionfigure{dermardiros/images/Grandma cake 1.JPG}{dermardiros/images/Grandma cake 2.jpg}{Marble cake with various designs}{fig:grandmacake}
 
-Sybil’s alternatives: orange zest and 1 cup chocolate chips, 2 bananas, 1 cup raisins. You can use more cocoa powder if you want to have a deeper chocolate taste.
-
+Sybil's alternatives: orange zest and 1 cup chocolate chips, 2 bananas, 1 cup raisins. You can use more cocoa powder if you want to have a deeper chocolate taste.
