--- a/monanteras/dolmadakia.tex
+++ b/monanteras/dolmadakia.tex
@@ -31,7 +31,7 @@
     Salt and pepper
 }
 
-\textit{Stuffed vine leaves with avgolemono sauce}
+\textit{Stuffed vine leaves with lemon-egg sauce}
 
 Family member: Grandma Eleni
 
