nit: color -> colour

--- a/dermardiros/khorabie.tex
+++ b/dermardiros/khorabie.tex
@@ -35,6 +35,6 @@ Family member: Metzma Lucie
     \item In a small bowl, mix the dates with the orange zest and orange juice.
     \item Shape balls of dough, make a small well in the center and stuff with the date filling. Enclose the dates in the center with the dough.
     \item Lightly flour the wooden khorabie mold and gently press the ball inside the mold to obtain a shape on one side.
-    \item Place the shaped cookies onto a baking sheet and bake 12-15 minutes on the middle rack at 350\degree F until the tops have a golden color.
+    \item Place the shaped cookies onto a baking sheet and bake 12-15 minutes on the middle rack at 350\degree F until the tops have a golden colour.
     \item Let cool and sift some icing sugar on top. Enjoy with coffee or tea!
 \end{enumerate}
