--- a/dermardiros/pastameatsauce.tex
+++ b/dermardiros/pastameatsauce.tex
@@ -33,7 +33,7 @@ Family member: Aunt Joanne
 \begin{enumerate}
     \item Slice the dried sausage and put it aside.
     \item Heat the olive oil in a skillet and gently cook the onion and garlic, stirring for 10 minutes until softened.
-    \item Add the minced veal, pork and beef and cook until they change color, stirring constantly and breaking up the meat. Stir in the dried sausage.
+    \item Add the minced veal, pork and beef and cook until they change colour, stirring constantly and breaking up the meat. Stir in the dried sausage.
     \item Purée the diced tomatoes in a blender and pour into a cooking pot. You can also leave them diced as is.
     \item Mix each can of tomato paste in a cup of water and add them to the cooking pot.
     \item Add 1-1/4 cups of red wine. Add sugar, salt and pepper.
