--- a/dermardiros/yulelog.tex
+++ b/dermardiros/yulelog.tex
@@ -37,7 +37,7 @@ Family member: Aunt Joanne
 \begin{enumerate}
     \item Preheat oven to 400\degree F. Grease the bottom of pan with margarine. Place parchment paper on top, and spray Pam on the parchment paper.
     \item In a large bowl with the mixer at high speed, beat egg whites until soft peaks form. Beating at high speed, gradually sprinkle in 1/2 cup confectioners' sugar, beating thoroughly after each addition. Continue beating until the egg whites stand in stiff, glossy peaks. Set aside.
-    \item In small bowl with same beaters and with the mixer at high speed, beat egg yolks until thick and lemon-colored. Reduce speed to low; beat in the salt, 1/2 cup confectioners' sugar and 3 tbsp cocoa powder, occasionally scraping bowl with rubber spatula.
+    \item In small bowl with same beaters and with the mixer at high speed, beat egg yolks until thick and lemon-coloured. Reduce speed to low; beat in the salt, 1/2 cup confectioners' sugar and 3 tbsp cocoa powder, occasionally scraping bowl with rubber spatula.
     \item Using the wire whisk or rubber spatula, gently fold the yolk mixture into the beaten whites just until the mixture is blended. Spread the batter evenly in the pan and bake 15 minutes or until top springs back when lightly touched with finger.
     \item Prepare a clean cloth towel by sprinkling it with cocoa powder.
     \item When the cake is done, with small spatula, immediately loosen its edges from the side of pan; invert the cake onto the prepared towel. Gently peel the parchment paper from bottom of cake. Roll the towel with the cake from narrow end, jelly-roll fashion. Let it cool completely, placing it seam side down on wire rack.
