--- a/monanteras/diples.tex
+++ b/monanteras/diples.tex
@@ -30,6 +30,6 @@ Family member: Grandma Elisavet
     \item In a large bowl, mix the eggs with the sugar.
     \item Add flour, and mix until you can form a dough, mix slowly. If too stiff, add water bit by bit. If too soft, add some flour.
     \item Using a rolling pin, roll out the dough until you have thin sheets. Cut them into strips, then rectangles.
-    \item Heat oil in a frying pan. One by one, fry the dough sheets. When they start to puff up, use a fork to roll them and form a cylinder. Once they start to color, remove them onto a plate lined with paper.
+    \item Heat oil in a frying pan. One by one, fry the dough sheets. When they start to puff up, use a fork to roll them and form a cylinder. Once they start to colour, remove them onto a plate lined with paper.
     \item Warm honey in a small pot. Once the diples have cooled down, drizzle some honey on top, add crushed walnuts and a sprinkle of cinnamon. Serve with coffee after Christmas dinner!
 \end{enumerate}
