--- a/monanteras/eastereggs.tex
+++ b/monanteras/eastereggs.tex
@@ -19,14 +19,14 @@ Family member: Mom
 
 \marginalfigure{monanteras/images/Eggs 7.jpg}{Red Easter eggs}{fig:eastereggs}
 
-\newthought{After every} Easter dinner we would all gather around the table to break the painted eggs. At the end, we would have egg shell on the entire table and our hands would be red! And every year, a different person would have the "strongest" egg!     The dye can be found at Greek bakeries such as at Afroditi or Serano Bakery in Laval. Mom found this method to yield the deepest red colored eggs.
+\newthought{After every} Easter dinner we would all gather around the table to break the painted eggs. At the end, we would have egg shell on the entire table and our hands would be red! And every year, a different person would have the "strongest" egg!     The dye can be found at Greek bakeries such as at Afroditi or Serano Bakery in Laval. Mom found this method to yield the deepest red coloured eggs.
 
 \begin{enumerate}
     \item Boil the eggs and cool them.
-    \item Empty the color in the pot filled with 1 liter of lukewarm water and the vinegar.
-    \item Add enough eggs to be fully covered with the colored water. After 5 minutes, remove the eggs and place them on paper towel to drain the water.
+    \item Empty the colour in the pot filled with 1 liter of lukewarm water and the vinegar.
+    \item Add enough eggs to be fully covered with the coloured water. After 5 minutes, remove the eggs and place them on paper towel to drain the water.
     \item Wipe the eggs with some vegetable oil.
-    \item Using the same colored water, do the same with the rest of the eggs.
+    \item Using the same coloured water, do the same with the rest of the eggs.
 \end{enumerate}
 
 \twosidecaptionfigure{monanteras/images/Easter eggs with grandma.jpg}{monanteras/images/Eggs 3.jpg}{Easter with Grandma Eleni}{fig:eastereggs_2}
