--- a/monanteras/tsoureki.tex
+++ b/monanteras/tsoureki.tex
@@ -40,8 +40,8 @@ Family member: Grandma Eleni
     \item After half an hour, mix all the ingredients for the dough in a large bowl and leave it uncovered for 1 hour.
     \item Once 1 hour has passed, shape in braids and let them rise uncovered for 6 hours.
     \item Shape pieces of foil into small cylinders and place in the middle of each bun, where the painted eggs will go. Brush with egg wash and decorated with slivered almonds.
-    \item Bake at 350-400\degree F until the tops have a golden color and tsourekia are baked.
-    \item Let cool for a few hours. Remove the foil and replace with colored Easter eggs.
+    \item Bake at 350-400\degree F until the tops have a golden colour and tsourekia are baked.
+    \item Let cool for a few hours. Remove the foil and replace with coloured Easter eggs.
 \end{enumerate}
 
 \captionfigure{monanteras/images/Grandma eleni.JPG}{Grandma Eleni}{fig:tsoureki}
