--- a/velsa/kourabiewithnuts.tex
+++ b/velsa/kourabiewithnuts.tex
@@ -38,6 +38,6 @@ Family member: Elsa \& Vaski
     \item Place the mixture in a larger bowl, add the 150g toasted  chopped almonds and mix lightly with your hands.
     \item Preheat oven to 350\degree F and layer 2 baking sheets with parchment paper.
     \item Roll dough into 1 tbsp (30g) balls and place them on the baking sheets. Slightly put with your finger in the middle, to form a little dimple. Place in the fridge for 10-15 minutes before baking.
-    \item Bake for 15-20 minutes until the cookies are faintly golden on the top and colored on the bottom. Be careful not to overbake them.
+    \item Bake for 15-20 minutes until the cookies are faintly golden on the top and coloured on the bottom. Be careful not to overbake them.
     \item Let them completely cool before dusting them with powdered sugar.
 \end{enumerate}
