--- a/velsa/roasted_beet_salad_with_ricotta.tex
+++ b/velsa/roasted_beet_salad_with_ricotta.tex
@@ -27,7 +27,7 @@ Family member: Elsa \& Vaski
 
 \begin{enumerate}
     \item In a large bowl, toss beets with olive oil, rosemary, salt and pepper. If using yellow and red beets, toss separately. Place in aluminum foil pouches, onto a baking sheet and roast about 45 minutes at 400\degree F, or until you can easily poked them with a knife. Cool.
-    \item Make vinaigrette: Take 1/2 the pistachios and grind into a coarse powder using the mortar and pestle. In a small bowl, combine the ground pistachios with the orange and grapefruit juices, lemon juice, shallot, honey, parsley and about 3 tbsp of olive oil. Whisk until well combined. Place the different colored beets in 2 different bowls and toss them each with the vinaigrette. Season with salt and pepper.
+    \item Make vinaigrette: Take 1/2 the pistachios and grind into a coarse powder using the mortar and pestle. In a small bowl, combine the ground pistachios with the orange and grapefruit juices, lemon juice, shallot, honey, parsley and about 3 tbsp of olive oil. Whisk until well combined. Place the different coloured beets in 2 different bowls and toss them each with the vinaigrette. Season with salt and pepper.
     \item On a pretty plate, spread some of the ricotta or goat cheese and place the beets in the middle. Place the supremes of citrus and drizzle some of the vinaigrette. Add chopped parsley, chopped pistachios and some dollops of ricotta and goat cheese.
 \end{enumerate}
 
