--- a/monanteras/melomakarona.tex
+++ b/monanteras/melomakarona.tex
@@ -35,7 +35,7 @@ Family member: Grandma Eleni
 \begin{enumerate}
     \item In a large bowl, mix all the ingredients for the melomakarona. Start with 6 cups flour, and add more to get texture needed to shape.
     \item Place the shapes melomakarona on a baking sheet. Bake at 350\degree F for about 30 minutes or until slightly golden.
-    \item Once the cookies are done and have a golden color, remove from the oven. Let the cookies cool. 
+    \item Once the cookies are done and have a golden colour, remove from the oven. Let the cookies cool. 
     \item To make the syrup, put the ingredients in a medium pot and mix. Heat until it simmers and let it boil for 5 minutes. Remove from the heat.
     \item Once the cookies have cooled, put the warm syrup in a large bowl. Dip the cookies one by one, on both sides with a fork in the syrup. Place them on a cooling rack for excess syrup to drip
     \item Decorate with crushed walnuts before storing them in a large Tupperware.
