--- a/monanteras/moustokouloura.tex
+++ b/monanteras/moustokouloura.tex
@@ -34,7 +34,7 @@ Family member: Grandma Eleni
     \item Add the dry ingredients (half the flour with the spices and baking powder) to the wet ingredients slowly while mixing. Scrape down the sides of the bowl, and let the dough rest for about 15 min.
     \item Restart the mixer and add some of the flour that was kept aside, as much as needed to form a ball. You might not have to use it all.
     \item Place a little bit of vegetable oil in a small bowl and use it to wet hands. Use hands to knead the dough slightly. Dough might be sticky, but use some oil to wet hands. Roll into small balls then into strings, then shape into twists, pretzels and small koulourakia.
-    \item Place the shaped cookies onto baking sheets and bake 12-15 minutes on the upper rack at 350\degree F until the tops have a golden color.
+    \item Place the shaped cookies onto baking sheets and bake 12-15 minutes on the upper rack at 350\degree F until the tops have a golden colour.
 \end{enumerate}
 
 Eat soon after baking, and once cooled, stored in a large Tupperware. This allows them to be soft and can be kept for a long time if you can resist.
