--- a/monanteras/portokalopita.tex
+++ b/monanteras/portokalopita.tex
@@ -47,7 +47,8 @@ Family member: Helen
     \item Add the oil and the orange juice to the bowl, and mix to combine well with the rest of the ingredients.
     \item Using a rubber spatula begin to incorporate your dried out and torn phyllo into the cake batter, a little bit at a time.
     \item Pour the mixture into a 9x13 inch sized baking dish (Pyrex). Bake for 50-60 minutes.
-    \item Once the cake is done and has a golden color, remove from the oven. Immediately pierce it in several places with a long clean souvlaki stick. \item Pour all of the cooled syrup onto the warm cake, one ladle at a time. Allow each ladle to be absorbed into the cake before adding the next one. Repeat until all of the syrup has been used.
+    \item Once the cake is done and has a golden colour, remove from the oven. Immediately pierce it in several places with a long clean souvlaki stick.
+    \item Pour all of the cooled syrup onto the warm cake, one ladle at a time. Allow each ladle to be absorbed into the cake before adding the next one. Repeat until all of the syrup has been used.
     \item Let the cake cool before cutting, to allow the syrup to be fully absorbed.
 \end{enumerate}
 
